--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="/images/profile.jpg" alt="User">
+                    <img src="images/profile.jpg" alt="User">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -114,7 +114,7 @@
             <h1 class="sub-title">Projects</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="/images/work.jpeg" alt="image">
+                    <img src="images/work.jpeg" alt="image">
                     <div class="layer">
                         <h3>Social Media App</h3>
                         <p>connect to world through amazing social media app
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="/images/work.jpeg" alt="image">
+                    <img src="images/work.jpeg" alt="image">
                     <div class="layer">
                         <h3>Social Media App</h3>
                         <p>connect to world through amazing social media app
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="/images/work.jpeg" alt="image">
+                    <img src="images/work.jpeg" alt="image">
                     <div class="layer">
                         <h3>Social Media App</h3>
                         <p>connect to world through amazing social media app
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="/images/work.jpeg" alt="image">
+                    <img src="images/work.jpeg" alt="image">
                     <div class="layer">
                         <h3>Social Media App</h3>
                         <p>connect to world through amazing social media app
